--- a/GrapefruitVideoPlayer/app/src/main/res/values/colors.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorPrimary">#9c27b0</color>
     <color name="colorPrimaryDark">#6a0080</color>
     <color name="colorAccent">#003663</color>
+    <color name="overlayBackground">#8a000000</color>
+    <color name="progress_color">#e8201f</color>
 </resources>
