--- a/GrapefruitVideoPlayer/app/src/main/res/values/colors.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="colorPrimaryDark">#6a0080</color>
     <color name="colorAccent">#003663</color>
     <color name="overlayBackground">#8a000000</color>
+    <color name="colorAccentWithOpacity">#8a003663</color>
     <color name="progress_color">#e8201f</color>
 </resources>
