--- a/GrapefruitVideoPlayer/app/src/main/res/values/colors.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="overlayBackground">#8a000000</color>
     <color name="colorAccentWithOpacity">#8a003663</color>
     <color name="progress_color">#e8201f</color>
+    <color name="colorDurationBg">#ad101010</color>
+    <color name="colorDurationText">#adFFFFFF</color>
 </resources>
