--- a/GrapefruitVideoPlayer/app/src/main/res/values/dimens.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/values/dimens.xml
@@ -7,7 +7,9 @@
     <dimen name="text_size_small">8sp</dimen>
     <dimen name="special_icon_size">30dp</dimen>
     <dimen name="tv_backward_margin">3dp</dimen>
-    <dimen name="thumbnail_size">56dp</dimen>
+    <dimen name="thumbnail_width">176dp</dimen>
+    <dimen name="thumbnail_height">88dp</dimen>
     <dimen name="text_size_large">16sp</dimen>
     <dimen name="text_size_medium">14sp</dimen>
+    <dimen name="padding_duration_text">2dp</dimen>
 </resources>
