--- a/GrapefruitVideoPlayer/app/src/main/res/menu/menu_main.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/menu/menu_main.xml
@@ -8,4 +8,8 @@
         android:icon="@drawable/ic_settings_black_24dp"
         android:title="@string/settings"
         app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/menu_item_select_as_thumbnail"
+        android:title="@string/select"/>
 </menu>
