--- a/GrapefruitVideoPlayer/app/src/main/res/values/colors.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="colorAccentWithOpacity">#8a003663</color>
     <color name="progress_color">#e8201f</color>
     <color name="colorDurationBg">#ad101010</color>
+    <color name="colorPlayerBg">#c6101010</color>
     <color name="colorDurationText">#adFFFFFF</color>
 </resources>
