--- a/GrapefruitVideoPlayer/app/src/main/res/layout/activity_video_player.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/layout/activity_video_player.xml
@@ -8,10 +8,14 @@
     android:layout_height="match_parent"
     tools:context=".VideoPlayerActivity">
 
+    <!--app:resize_mode="fill" stretches video.
+    This is ok for portrait mode video but a bit
+    awkward for landscape mode video -->
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/playerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:resize_mode="fill"
         app:layout_constraintDimensionRatio="4:3"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
