--- a/GrapefruitVideoPlayer/app/src/main/res/layout-land/fragment_video_controller.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/layout-land/fragment_video_controller.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
-    tools:context=".VideoControllerFragment">
+    tools:context=".activities.VideoControllerFragment">
 
     <ImageView
         android:id="@+id/iv_previous"
