--- a/GrapefruitVideoPlayer/app/src/main/res/layout/activity_video_player.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/layout/activity_video_player.xml
@@ -6,16 +6,14 @@
     android:background="@color/colorPlayerBg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VideoPlayerActivity">
+    tools:context=".activities.VideoPlayerActivity">
 
-    <!--app:resize_mode="fill" stretches video.
-    This is ok for portrait mode video but a bit
-    awkward for landscape mode video -->
-    <com.google.android.exoplayer2.ui.PlayerView
-        android:id="@+id/playerView"
+
+    <SurfaceView
+        android:id="@+id/surfaceView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:resize_mode="fill"
+        android:keepScreenOn="true"
         app:layout_constraintDimensionRatio="4:3"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,7 +29,7 @@
         android:background="@null"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/playerView"/>
+        app:layout_constraintBottom_toTopOf="@id/surfaceView"/>
 
     <ImageButton
         android:id="@+id/btn_next"
@@ -42,7 +40,7 @@
         android:background="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/playerView"/>
+        app:layout_constraintBottom_toTopOf="@id/surfaceView"/>
 
     <TextView
         android:id="@+id/tv_progress_time"
@@ -54,7 +52,7 @@
         android:textSize="@dimen/text_size_medium"
         android:layout_marginLeft="@dimen/margin_small"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/playerView"
+        app:layout_constraintTop_toBottomOf="@id/surfaceView"
         app:layout_constraintBottom_toBottomOf="@id/seek_bar_portrait"/>
 
     <TextView
@@ -67,7 +65,7 @@
         android:textSize="@dimen/text_size_medium"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginRight="@dimen/margin_small"
-        app:layout_constraintTop_toBottomOf="@id/playerView"
+        app:layout_constraintTop_toBottomOf="@id/surfaceView"
         app:layout_constraintBottom_toBottomOf="@id/seek_bar_portrait"/>
 
     <android.support.v7.widget.AppCompatSeekBar
@@ -79,7 +77,7 @@
         android:padding="@dimen/margin_small"
         app:layout_constraintLeft_toRightOf="@id/tv_progress_time"
         app:layout_constraintRight_toLeftOf="@id/tv_total_progress"
-        app:layout_constraintTop_toBottomOf="@id/playerView"/>
+        app:layout_constraintTop_toBottomOf="@id/surfaceView"/>
 
     <ImageButton
         android:id="@+id/btn_fast_rewind"
@@ -116,7 +114,7 @@
         android:id="@+id/btn_play_pause"
         android:layout_width="@dimen/btn_size_play"
         android:layout_height="@dimen/btn_size_play"
-        android:src="@drawable/ic_play"
+        android:src="@drawable/ic_pause"
         android:scaleType="centerCrop"
         android:background="@null"
         app:layout_constraintStart_toEndOf="@id/btn_fast_rewind"
