--- a/GrapefruitVideoPlayer/app/src/main/res/layout/fragment_video_controller.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/layout/fragment_video_controller.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VideoControllerFragment">
+    tools:context=".activities.VideoControllerFragment">
 
     <!-- If portrait variant is not made
     then app will crash on config change.-->
