--- a/GrapefruitVideoPlayer/app/src/main/res/values/colors.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--<color name="colorPrimary">#008577</color>-->
-    <!--<color name="colorPrimaryDark">#00574B</color>-->
-    <color name="colorPrimary">#9c27b0</color>
-    <color name="colorPrimaryDark">#6a0080</color>
+    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimaryDark">#00574B</color>
+    <!--<color name="colorPrimary">#9c27b0</color>-->
+    <!--<color name="colorPrimaryDark">#6a0080</color>-->
     <color name="colorAccent">#003663</color>
     <color name="overlayBackground">#8a000000</color>
     <color name="colorAccentWithOpacity">#8a003663</color>
