--- a/GrapefruitVideoPlayer/app/src/main/res/values/styles.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/values/styles.xml
@@ -16,4 +16,8 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
+    <style name="SettingsDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
 </resources>
