--- a/GrapefruitVideoPlayer/app/src/main/res/layout/activity_video_player.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/layout/activity_video_player.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
+    android:id="@+id/cl_layout_root"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -121,4 +122,12 @@
         app:layout_constraintEnd_toStartOf="@id/btn_fast_forward"
         app:layout_constraintTop_toBottomOf="@id/seek_bar_portrait"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <View
+        android:id="@+id/control_view_landscape"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#59003663"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
