Does following changes: 	1. Clear constraints before setting it in landscape mode. 	2. Changes progress background tint color.

--- a/GrapefruitVideoPlayer/app/src/main/res/values/colors.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="progress_color">#e8201f</color>
     <color name="colorDurationBg">#ad101010</color>
     <color name="colorPlayerBg">#c6101010</color>
+    <color name="colorPlayerBgLight">#73101010</color>
     <color name="colorDurationText">#adFFFFFF</color>
 </resources>
