--- a/GrapefruitVideoPlayer/app/src/main/res/layout/activity_video_player.xml
+++ b/GrapefruitVideoPlayer/app/src/main/res/layout/activity_video_player.xml
@@ -9,7 +9,6 @@
     android:layout_height="match_parent"
     tools:context=".activities.VideoPlayerActivity">
 
-
     <SurfaceView
         android:id="@+id/surfaceView"
         android:layout_width="0dp"
@@ -20,6 +19,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <View
+        android:id="@+id/control_view_landscape"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/colorPlayerBgLight"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageButton
         android:id="@+id/btn_prev"
@@ -44,7 +51,7 @@
         app:layout_constraintBottom_toTopOf="@id/surfaceView"/>
 
     <TextView
-        android:id="@+id/tv_progress_time"
+        android:id="@+id/tv_time_elapsed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="00 : 00"
@@ -57,7 +64,7 @@
         app:layout_constraintBottom_toBottomOf="@id/seek_bar_portrait"/>
 
     <TextView
-        android:id="@+id/tv_total_progress"
+        android:id="@+id/tv_total_duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="00 : 00"
@@ -75,9 +82,10 @@
         android:layout_height="wrap_content"
         android:thumbTint="@color/progress_color"
         android:progressTint="@color/progress_color"
+        android:progressBackgroundTint="@android:color/white"
         android:padding="@dimen/margin_small"
-        app:layout_constraintLeft_toRightOf="@id/tv_progress_time"
-        app:layout_constraintRight_toLeftOf="@id/tv_total_progress"
+        app:layout_constraintLeft_toRightOf="@id/tv_time_elapsed"
+        app:layout_constraintRight_toLeftOf="@id/tv_total_duration"
         app:layout_constraintTop_toBottomOf="@id/surfaceView"/>
 
     <ImageButton
@@ -123,11 +131,4 @@
         app:layout_constraintTop_toBottomOf="@id/seek_bar_portrait"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <View
-        android:id="@+id/control_view_landscape"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#59003663"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
